fixed ng-content image squish bug?

--- a/portfolio-website/src/app/components/about-me/about-me.component.scss
+++ b/portfolio-website/src/app/components/about-me/about-me.component.scss
@@ -135,8 +135,12 @@
   margin-top: 0;
 }
 
-.experience-container img{
+.company-image img{
+  height: 100%;
   border-radius: 50%;
+}
+
+.company-image{
   height: 75px;
   width: 75px;
   margin-right: 20px;
